# nems_fingerprint

./: .gitignore  README.md  pyproject.toml
docs/: Sensibility_Test.ipynb  example_bootstrap.ipynb  example_usage-Copy1.ipynb  example_usage.ipynb  mm_surface_disp.csv  surface_disp.csv
examples/: 01_basic_usage.ipynb
examples/data/: shear_device.mphtxt  shear_device_eigenmodes.csv  shear_device_frequencies.csv
nems_fingerprint/: __init__.py  bootstrap.py  comsol.py  euler_bernoulli_beam.py  mass_predictor.py  measurement.py  nems_fingerprint.py  sensibility_model.py  simulation.py
