[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nems_fingerprint"
version = "0.0.1"
authors = [
    {name = "Alex", email = "alex.nunn@pm.me"},
]
description = "A package for NEMS Mass Spectroscopy"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["Foo", "example", "spreading"]

dependencies = [
    'numpy', 'scipy'
]

[tool.setuptools.packages.find]
where = ["."]