[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nems_fingerprint"
version = "0.0.1"
authors = [
    {name = "Alex", email = "alex.nunn@pm.me"},
]
description = "A package for NEMS Mass Spectrometry"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["nems", "mass spectrometry", "NEMS"]

dependencies = [
    'numpy', 'scipy'
]

[tool.setuptools.packages.find]
where = ["nems_fingerprint"]